# molplot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  zensical.toml
.claude/notes/: README.md  architecture.md  notes.md  open-questions.md
.claude/specs/: INDEX.md
.github/workflows/: ci.yml  docs.yml  release-core.yml  release-github.yml  release-python.yml
core/: README.md  package.json  rslib.config.ts  rstest.config.ts
core/src/: bar_chart.ts  chart_base.ts  element.ts  element_entry.ts  gantt_chart.ts  index.ts  line_chart.ts  preset.ts  raw_chart.ts  scatter_chart.ts  specs.ts  theme.ts  types.ts  vega_loader.ts
core/src/presets/: generated.ts
core/tests/: _fake_vega.ts  axis_hover_zoom.test.ts  element.test.ts  line_chart.test.ts  preset.test.ts  scatter_chart.test.ts  specs.test.ts
docs/: index.md
docs/api/: index.md
docs/getting-started/: index.md  markdown.md  preset.md  python.md  web.md
page/: package.json  rsbuild.config.ts  tsconfig.json
page/src/: App.tsx  index.tsx
presets/: molplot-paper.json  molplot.json  preset.schema.json
python/: LICENSE  README.md  pyproject.toml
python/src/molplot/: __init__.py  charts.py  convert.py  mdx.py  palette.py  preset.py  render.py  specs.py  style.py  vega_config.py
python/src/molplot/presets/: _generated.py  molplot-dark.mplstyle  molplot-paper-dark.mplstyle  molplot-paper.mplstyle  molplot.mplstyle
python/tests/: conftest.py  test_charts.py  test_mdx.py  test_preset.py  test_render.py  test_specs.py  test_style.py
scripts/: build-presets.mjs  run-python-tests.sh
